--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 let title = $("#title").val();
                 let id = $("#id").val();
                 let year = $("#year").val();
-                let url = "http://www.omdbapi.com/?apikey=75ca2df";
+                let url = "https://www.omdbapi.com/?apikey=75ca2df";
                 if(title!=""){
                     url = url.concat(`&t=${title}`); 
                 }
