--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         </form>
     </div>
-    <div class="card" style="width: 18rem; margin: auto; display: none; color: black; margin-top: 7%; width: 40%" id="card-movie">
+    <div class="card" style="width: 18rem; margin: auto; display: none; color: black; margin-top: 7%;" id="card-movie">
             <img class="card-img-top" src="poster.jpg" alt="Card image cap">
             <div class="card-body" id="card-body">
               <h5 class="card-title">Card title</h5>
